Completed Parser.parse() until ContextAction matching.